# Diagnosis-Of-Pneumonia-From-X-ray-Images

./: README.md  pyproject.toml
notebooks/: pneumonia_detection_inceptionnet.ipynb
src/: app.py  predictor.py  streamlit_app.py
src/static/: main.css
src/templates/: index.html
tests/: test_melanoma_detection.py
