[tool.poetry]
name = "Pneumonia_Xray_Image_Classification"
version = "0.1.0"
description = ""
authors = ["prabhat-123 <srv.ale52@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.5"
Flask = "1.1.2"
gevent = "20.6.2"
Pillow = "7.1.2"
streamlit = "^0.87.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
